manifests/istio-extension/prod-eu-central-1/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: istio-gateway
  namespace: istio-system
spec:
  gatewayClassName: istio
  infrastructure:
    parametersRef:
      group: ""
      kind: ConfigMap
      name: istio-gateway-config
  listeners:
    - name: http
      port: 80
      protocol: HTTP
      hostname: "*.prod.eu-central-1.localhost"
      allowedRoutes:
        namespaces:
          from: All
    - name: https
      port: 443
      protocol: HTTPS
      hostname: "*.prod.eu-central-1.localhost"
      tls:
        mode: Terminate
        certificateRefs:
          - name: prod-wildcard-tls
            kind: Secret
      allowedRoutes:
        namespaces:
          from: All
