manifests/istio-extension/prod-eu-central-1/httproute-redirect.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-to-https-redirect
  namespace: istio-system
spec:
  parentRefs:
    - name: istio-gateway
      namespace: istio-system
      sectionName: http
  hostnames:
    - "*.prod.eu-central-1.localhost"
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
