manifests/istio-extension/prod-eu-central-1/authorization-policy-default-deny.yaml
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: default-deny
  namespace: istio-system
spec: {}
